@startuml
!include ../../styles.puml
'https://plantuml.com/class-diagram

title Borg Design Pattern Documentation

header
    The Borg Pattern is a variation of the Singleton Pattern that ensures all
    instances of a class share the same state. Unlike Singleton, multiple instances
    can exist, but they all share the same data, providing a shared state across
    all instances of the class.
endheader

class type {
}

metaclass MetaBorg {
    - {field} state
    - {method} call(cls, *args, **kwargs)
    - {method} check_args(cls, *args, **kwargs)

}

class SharedStateManager {
    {field} value: Any
}

class SharedStateSubManager {
}

type <|-- MetaBorg
MetaBorg <-- SharedStateManager : use as metaclass
SharedStateManager <|- SharedStateSubManager

@enduml